fix scrollbar

--- a/src/components/Layout/component/Header/Header.module.scss
+++ b/src/components/Layout/component/Header/Header.module.scss
@@ -4,24 +4,30 @@
     --search-top-spacer: 9px;
     --search-button-width: 52px;
 
-    width: 100%;
-    height: var(--default-layout-header-height, 60px);
-    box-shadow: 0px 1px 1px rgb(0, 0, 0, 12%);
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10;
     display: flex;
     justify-content: center;
+    width: 100%;
+    height: var(--default-layout-header-height);
+    box-shadow: 0px 1px 1px rgb(0, 0, 0, 12%);
+    background-color: var(--white);
 }
 
 .inner {
     height: 100%;
+    width: var(--default-layout-width);
+    padding: 0 var(--default-layout-horizontal-spacer);
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: var(--default-layout-width);
-    padding: 0 var(--default-layout-horizontal-spacer);
 
-    .logo-link {
-        display: flex;
-    }
+}
+
+.logo-link {
+    display: flex;
 }
 
 // .logo {
